--- a/assets/css/_sass/_base.scss
+++ b/assets/css/_sass/_base.scss
@@ -10,36 +10,37 @@ dl, dd, ol, ul, figure {
 }
 
 /*
-  Add custom fonts
+  Add custom fonts. Note that we have to use relative paths to help github pages
+  find the fontfaces correctly. The absolute path from the root directory will not work.
 */
 @font-face {
   font-family: 'Anak Anak';
-  src: url('/assets/fonts/AnakAnak.ttf') format('truetype');
+  src: url('../fonts/AnakAnak.ttf') format('truetype');
 }
 @font-face {
   font-family: 'Blobtastics';
-  src: url('/assets/fonts/Blobtastics.ttf') format('truetype');
+  src: url('../fonts/Blobtastics.ttf') format('truetype');
 }
 @font-face {
   font-family: 'Discobaby';
-  src: url('/assets/fonts/Discobaby.ttf') format('truetype'),
-       url('/assets/fonts/Discobaby.otf') format('opentype');
+  src: url('../fonts/Discobaby.ttf') format('truetype'),
+       url('../fonts/Discobaby.otf') format('opentype');
 }
 @font-face {
   font-family: 'MurderBlock Black';
-  src: url('/assets/fonts/MurderBlock-Black.otf') format('opentype');
+  src: url('../fonts/MurderBlock-Black.otf') format('opentype');
 }
 @font-face {
   font-family: 'Moon Walker';
-  src: url('/assets/fonts/MoonWalkerPersonalUse.ttf') format('truetype');
+  src: url('../fonts/MoonWalkerPersonalUse.ttf') format('truetype');
 }
 @font-face {
   font-family: 'Rushda Funky';
-  src: url('/assets/fonts/RushdaFunky.otf') format('opentype');
+  src: url('../fonts/RushdaFunky.otf') format('opentype');
 }
 @font-face {
   font-family: 'Sketchalot';
-  src: url('/assets/fonts/Sketchalot.ttf') format('truetype');
+  src: url('../fonts/Sketchalot.ttf') format('truetype');
 }
 
 
