--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,13 +5,19 @@
 /*
   Site variables
 */
-
-$base-font-family: 'Roboto', sans-serif;
-
-$body-font-family: 'Roboto', sans-serif;
-
+/*
+$base-font-family: 'Calibri', sans-serif;
+$body-font-family: 'Calibri', sans-serif;
 $code-font-family: "Source Code Pro", monospace;
+*/
+/*
+  Helvetica font-family
+ */
 
+$base-font-family: 'Helvetica', sans-serif;
+$body-font-family: 'Helvetica', sans-serif;
+$code-font-family: "Source Code Pro", monospace;
+ 
 $brand-color: black;
 
 $container-width: 1100px;
