--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -3,17 +3,15 @@
 ---
 
 /*
-  Site variables
-*/
-/*
+  Roboto font-family
 $base-font-family: 'Calibri', sans-serif;
 $body-font-family: 'Calibri', sans-serif;
 $code-font-family: "Source Code Pro", monospace;
 */
+
 /*
   Helvetica font-family
  */
-
 $base-font-family: 'Helvetica', sans-serif;
 $body-font-family: 'Helvetica', sans-serif;
 $code-font-family: "Source Code Pro", monospace;
