--- a/assets/css/_sass/_header.scss
+++ b/assets/css/_sass/_header.scss
@@ -1,23 +1,16 @@
 .site-header {
   min-height: 56px;
   width: $container-width;
-  position: fixed;
-  background-color: white;
-  box-shadow: 0 5px 6px -6px #bbb;
-  z-index: 100;
+  color: #ffffff;
 }
 @media (max-width: $container-width) {
   .site-header {
-      min-height: 56px;
-      width: 95vw;
-      position: fixed;
-      background-color: white;
-      box-shadow: 0 5px 6px -6px #bbb;
-      z-index: 100;
+    min-height: 56px;
   }
 }
 .site-header a {
   text-decoration: none;
+  color: $navbar-textcolor;
 }
 .site-title {
   font-size: 26px;
