--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2,22 +2,29 @@
 # Front matter comment to ensure Jekyll properly reads file.
 ---
 
+/* Roboto font-family */
 /*
-  Roboto font-family
 $base-font-family: 'Calibri', sans-serif;
 $body-font-family: 'Calibri', sans-serif;
 $code-font-family: "Source Code Pro", monospace;
 */
 
-/*
-  Helvetica font-family
- */
+/* Helvetica font-family */
 $base-font-family: 'Helvetica', sans-serif;
 $body-font-family: 'Helvetica', sans-serif;
 $code-font-family: "Source Code Pro", monospace;
- 
+
+/* Black navbar */
+/*
+$navbar-backgound: #2b2b2b;
+$navbar-textcolor: #ffffff;
+*/
+$navbar-backgound: white;
+$navbar-textcolor: black;
+
 $brand-color: black;
 
+$container-nav-width: 1100px;
 $container-width: 1100px;
 
 $tablet-width: 600px;
