--- a/assets/css/_sass/_default.scss
+++ b/assets/css/_sass/_default.scss
@@ -7,7 +7,8 @@
   margin-left: auto;
   margin-right: auto;
   background: $navbar-backgound;
-  box-shadow: 0 5px 6px -6px #bbb;
+  // Do not render box shadow in black navigation bar.
+  // box-shadow: 0 5px 6px -6px #bbb;
   z-index: 100;
   vertical-align: baseline;
   overflow: hidden;
