--- a/assets/css/_sass/_header.scss
+++ b/assets/css/_sass/_header.scss
@@ -1,21 +1,23 @@
 .site-header {
-  min-height: 56px;
+  min-height: 45px;
   width: $container-width;
-  color: #ffffff;
 }
 @media (max-width: $container-width) {
   .site-header {
-    min-height: 56px;
+    min-height: 45px;
+    width: 95vw;
   }
 }
 .site-header a {
   text-decoration: none;
   color: $navbar-textcolor;
+  font-size: 14px;
+  font-weight: 400;
 }
 .site-title {
   font-size: 26px;
   font-weight: 400;
-  line-height: 56px;
+  line-height: 45px;
   margin-bottom: 0;
   margin-top: 0;
   padding-left: 10px;
@@ -26,7 +28,12 @@
   float: right;
 }
 .menu-link {
-  padding: 5px 10px;
+  padding: 0px 12px;
+  display: inline-block;
+}
+nav a:hover {
+  background: #2b2b2b;
+  color: white;
 }
 
 /*
