--- a/assets/css/_sass/_header.scss
+++ b/assets/css/_sass/_header.scss
@@ -6,6 +6,8 @@
   .site-header {
     min-height: 45px;
     width: 95vw;
+    background: $navbar-backgound;
+    color: $navbar-textcolor;
   }
 }
 .site-header a {
@@ -56,8 +58,8 @@ nav a:hover {
     padding-right: 0.25rem;
   }
   .dropbtn {
-      background-color: white;
-      color: black;
+      background: $navbar-backgound;
+      color: $navbar-textcolor;
       padding: 16px;
       margin-top: 4px;
       font-size: 16px;
