--- a/assets/css/_sass/_home.scss
+++ b/assets/css/_sass/_home.scss
@@ -5,6 +5,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
+  //z-index: 0;
 }
 .featured-posts h2 {
   bottom: 0;
