Modify nav bar fontsize and hyperlink styles

--- a/assets/css/_sass/_default.scss
+++ b/assets/css/_sass/_default.scss
@@ -24,6 +24,10 @@
   margin-right: auto;
 }
 .container a {
+  text-decoration: none;
+  color: #0645ad;
+}
+.container a:hover {
   text-decoration: underline;
 }
 .posts-wrapper {
