--- a/assets/css/_sass/_home.scss
+++ b/assets/css/_sass/_home.scss
@@ -5,7 +5,6 @@
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
-  //z-index: 0;
 }
 .featured-posts h2 {
   bottom: 0;
@@ -16,7 +15,7 @@
 .featured-posts h2 span {
    display: inline-block;
    color: white;
-   font: bold 24px/45px Helvetica, Sans-Serif;
+   font: bold 24px/45px $base-font-family, Sans-Serif;
    letter-spacing: -1px;
    background: rgb(0, 0, 0); /* fallback color */
    background: rgba(0, 0, 0, 0.7);
