--- a/assets/css/_sass/_social-icons.scss
+++ b/assets/css/_sass/_social-icons.scss
@@ -1,13 +1,16 @@
-$icon-transition-time: 1.0s;
+$icon-transition-time: $icon-transition;
 $envelope-color: #f39c12;
+$coffee-color: #8b4513;
 $twitter-color: #00aced;
 $instagram-color: #375989;
 $github-color: #343434;
+$github-alt-color: #ababab;
 $linkedin-color: #0073a4;
 $facebook-color: #3d5b99;
 $google-color: #e64a41;
 $pinterest-color: #bd081c;
-$medium-color: #00AB6C;
+$map-o-color: #ff1493;
+$medium-color: #00ab6c;
 $codepen-color: black;
 $rss-color: #ff6600;
 
@@ -21,58 +24,51 @@ $rss-color: #ff6600;
     color: $color;
   }
 }
-
+.fa-coffee {
+  @include social-media-icon($coffee-color, $icon-transition-time);
+}
 .fa-envelope {
-  padding: 5px;
   @include social-media-icon($envelope-color, $icon-transition-time);
 }
-
+.fa-envelope-o {
+  @include social-media-icon($envelope-color, $icon-transition-time);
+}
 .fa-twitter {
-  padding: 5px;
   @include social-media-icon($twitter-color, $icon-transition-time);
 }
-
 .fa-instagram {
-  padding: 5px;
   @include social-media-icon($instagram-color, $icon-transition-time);
 }
-
+.fa-camera {
+  @include social-media-icon($instagram-color, $icon-transition-time);
+}
 .fa-github {
-  padding: 5px;
   @include social-media-icon($github-color, $icon-transition-time);
 }
-
+.fa-github-alt {
+  @include social-media-icon($github-alt-color, $icon-transition-time);
+}
 .fa-linkedin {
-  padding: 5px;
   @include social-media-icon($linkedin-color, $icon-transition-time);
 }
-
 .fa-facebook {
-  padding: 5px;
   @include social-media-icon($facebook-color, $icon-transition-time);
 }
-
 .fa-google-plus {
-  padding: 5px;
   @include social-media-icon($google-color, $icon-transition-time);
 }
-
 .fa-pinterest {
-  padding: 5px;
   @include social-media-icon($pinterest-color, $icon-transition-time);
 }
-
+.fa-map-o {
+  @include social-media-icon($map-o-color, $icon-transition-time);
+}
 .fa-medium {
-  padding: 5px;
   @include social-media-icon($medium-color, $icon-transition-time);
 }
-
 .fa-codepen {
-  padding: 5px;
   @include social-media-icon($codepen-color, $icon-transition-time);
 }
-
 .fa-rss-square {
-  padding: 5px;
   @include social-media-icon($rss-color, $icon-transition-time);
 }
