--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2,14 +2,12 @@
 # Front matter comment to ensure Jekyll properly reads file.
 ---
 
-/* Roboto font-family */
 /*
-$base-font-family: 'Calibri', sans-serif;
-$body-font-family: 'Calibri', sans-serif;
-$code-font-family: "Source Code Pro", monospace;
+  Helvetica font-family
+  Note that such specification in CSS show Helvetica only for
+  those who have installed this font family, otherwise some
+  fallbacks will be made.
 */
-
-/* Helvetica font-family */
 $base-font-family: 'Helvetica', sans-serif;
 $body-font-family: 'Helvetica', sans-serif;
 $code-font-family: "Source Code Pro", monospace;
@@ -17,16 +15,14 @@ $code-font-family: "Source Code Pro", monospace;
 /* Black navbar */
 $navbar-backgound: #111111;
 $navbar-textcolor: #dddddd;
-
 $brand-color: black;
 
 $container-nav-width: 1100px;
 $container-width: 1100px;
-
 $tablet-width: 600px;
-
 $phone-width: 480px;
+$header-thickness: 42px;
 
-$header-thickness: 40px;
+$icon-transition: 0.5s;
 
 @import "_sass/-sections-dir";
