Fix transition when hover on and off

--- a/assets/css/_sass/_default.scss
+++ b/assets/css/_sass/_default.scss
@@ -25,7 +25,7 @@
 }
 .container a {
   text-decoration: none;
-  color: #0645ad;
+  color: $general-link-color;
 }
 .container a:hover {
   text-decoration: underline;
