--- a/assets/css/_sass/_social-icons.scss
+++ b/assets/css/_sass/_social-icons.scss
@@ -1,4 +1,4 @@
-$icon-transition-time: $icon-transition;
+$icon-transition-time: $transition-time;
 $envelope-color: #f39c12;
 $coffee-color: #8b4513;
 $twitter-color: #00aced;
