--- a/assets/css/_sass/_post.scss
+++ b/assets/css/_sass/_post.scss
@@ -10,7 +10,18 @@
   display: block;
   margin-bottom: 1rem;
   color: #9a9a9a;
-  font-size:0.8rem;
+  font-size: 0.8rem;
+}
+.post-date a {
+  -webkit-transition: $transition-time;
+  -o-transition: $transition-time;
+  -ms-transition: $transition-time;
+  -moz-transition: $transition-time;
+  transition: $transition-time;
+}
+.post-date a:hover {
+  color: $general-link-color;
+  text-decoration: none;
 }
 .featured-image img {
   align: middle;
