--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,8 +3,12 @@ layout: default
 title: Home
 ---
 
-{% for post in paginator.posts %}
-
+<!--
+  Only posts category will be shown in the main page
+  Use the following line to show all categories.
+   for post in paginator.posts
+-->
+{% for post in site.categories.posts %}
 <article>
   <a href="{{ site.github.url }}{{ post.url }}">
     <div class="featured-posts" {% if post.image %}style="background-image:url({{ site.github.url }}/assets/img/{{ post.image }})"{% endif %}>
@@ -12,7 +16,6 @@ title: Home
     </div>
   </a>
 </article>
-
 {% endfor %}
 
 <!-- Pagination links -->
