Use Roboto font by defaullt

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,8 +8,8 @@
   those who have installed this font family, otherwise some
   fallbacks will be made.
 */
-$base-font-family: 'Helvetica', sans-serif;
-$body-font-family: 'Helvetica', sans-serif;
+$base-font-family: 'Roboto', sans-serif;
+$body-font-family: 'Roboto', sans-serif;
 $code-font-family: "Source Code Pro", monospace;
 
 /* Black navbar */
