--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,7 +8,7 @@ title: Home
   Use the following line to show all categories.
    for post in paginator.posts
 -->
-{% for post in site.categories.posts %}
+{% for post in paginator.posts %}
 <article>
   <a href="{{ site.github.url }}{{ post.url }}">
     <div class="featured-posts" {% if post.image %}style="background-image:url({{ site.github.url }}/assets/img/{{ post.image }})"{% endif %}>
